# neuro-python-sdk

./: README.md  pyproject.toml
src/neurosdk/core/: config.py  manager.py
src/neurosdk/core/action/: action_group.py  neuro_action.py  neuro_handler.py
src/neurosdk/core/messages/: action.py  base_messages.py  core.py
src/neurosdk/examples/: simple.py  tictactoe.py
src/neurosdk/renpy/: pick_option_action.py  simple.py  simple_handler.py
